# agent-forge

./: .gitignore  README.md  claude-code-klavuz.md  package.json  pyproject.toml
.claude/: settings.local.json
claude_forge/: __init__.py  analyzer.py  cli.py  config.py  context_manager.py  generator.py  learner.py  mapper.py  mcp.py  models.py  navigator.py  release.py  scanner.py  skill_fetcher.py  sync.py  targets.py  tui.py  versioning.py
claude_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude_forge/hooks/: brain-sync.sh  pre-compact.sh  qa-gate.sh  session-start.sh
claude_forge/profiles/: __init__.py  applicator.py  base.yaml  cli_tool.yaml  data_pipeline.yaml  django.yaml  electron.yaml  express_node.yaml  extractor.py  fastapi.yaml  flutter.yaml  fullstack.yaml  golang.yaml  kotlin_android.yaml  loader.py  nextjs.yaml  react.yaml  react_native.yaml  rust.yaml  schema.py  springboot.yaml  swift_ios.yaml  telegram_bot.yaml  vue.yaml
docs/superpowers/plans/: 2026-03-18-claude-forge-v2.md
docs/superpowers/specs/: 2026-03-18-claude-forge-v2-design.md
tests/: conftest.py  test_context_manager.py  test_mapper.py  test_navigator.py  test_profiles.py  test_sync.py
