[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-forge"
version = "0.1.0"
description = "AI-powered Claude Code project setup tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
claude-forge = "claude_forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
