[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-forge"
version = "0.3.0"
description = "Multi-target AI assistant setup and management CLI"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
agent-forge-py = "claude_forge.cli:main"
claude-forge-py = "claude_forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
claude_forge = ["profiles/*.yaml", "hooks/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
